# ShortHaul-Dispatch-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  experiments.md  external_onboarding.md  input_contract.md
examples/: external_request.txt  sample_instance.json  sample_request.txt
examples/csv_template/: config_overrides.json  fleets.csv  forecast.csv  milk_run_pairs.csv  routes.csv
examples/messy_upload/: README.md  messy_dispatch_notes.txt  messy_shorthaul_business_export.xlsx
examples/workbook_template/: README.md  shorthaul_dispatch_template.xlsx
experiments/: d_problem_baseline.yaml  d_problem_performance.yaml  d_problem_wandb.yaml  d_problem_wandb_online.yaml
reports/: technical_report.md
scripts/: benchmark_llm_ingestion.py  export_d_problem_upload_package.py  format_check.py  render_architecture_figure.py  render_ui_preview.py  run_web_ui_windows.cmd  smoke_test.py
src/shorthaul_agent/: __init__.py  agents.py  api.py  baseline_comparison.py  cli.py  d_problem_package.py  data_ingestion_agent.py  experiment.py  external_io.py  io.py  models.py  parsing.py  time_utils.py  tracking.py  validation.py  web_ui.py
src/shorthaul_agent/solvers/: __init__.py  cpsat.py  heuristic.py  task_generation.py
tests/: test_api_schedule.py  test_baseline_comparison.py  test_data_ingestion_agent.py  test_experiment_helpers.py  test_experiment_summary_schema.py  test_external_io.py  test_pipeline.py  test_tracking.py  test_web_ui.py
