[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorthaul-dispatch-agent"
version = "0.1.0"
description = "LLM + constraint programming multi-agent scheduler for short-haul transportation."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Mathematical Modeling Team" }]
dependencies = ["pandas>=1.5", "numpy>=1.23", "openpyxl>=3.1"]

[project.optional-dependencies]
solver = ["ortools>=9.10"]
llm = ["openai>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0", "httpx>=0.27"]
experiment = ["matplotlib>=3.7", "seaborn>=0.13"]
tracking = ["wandb>=0.16"]

[project.scripts]
shorthaul-agent = "shorthaul_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = [".git", ".venv", ".worktrees", "outputs", "outputs_*", "pytest-cache-files-*", "wandb", "wandb_tmp"]
